tests/negative/test_attr_owning.orb
data Foo;

eval (fnc dropFoo (val:Foo::noDrop) ());

data Foo {
    x:i32
}::((drop dropFoo));

eval (fnc dropFoo (val:Foo::noDrop) () {});

fnc main () () {
    eval (sym f:Foo);
    sym (x 0::((abcd f)));
};